--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI = mongodb+srv://joshchristiannunez:TestBench1234@cluster0.ngd7avr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 DB_NAME = MCO3
 SERVER_PORT=3000
+SECRET=abcdefghijklmopqrstuvwxyz
